Fix for bug #21976: Unnecessary warning with count(decimal)

We use val_int() calls (followed by null_value check) to determine 
nullness in some Item_sum_count' and Item_sum_count_distinct' methods, 
as a side effect we get extra warnings raised in the val_int().
Fix: use is_null() instead.


mysql-test/r/func_group.result:
  Fix for bug #21976: Unnecessary warning with count(decimal)
    - test result.
mysql-test/t/func_group.test:
  Fix for bug #21976: Unnecessary warning with count(decimal)
    - test case.
sql/item.h:
  Fix for bug #21976: Unnecessary warning with count(decimal)
    - comment adjusted.
sql/item_sum.cc:
  Fix for bug #21976: Unnecessary warning with count(decimal)
    - use is_null() to determine nullness.